--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "engines": {
-  	"node" : "6.10.0"
+    "node": "6.10.0"
   },
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -23,17 +23,17 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic/storage": "2.0.0",
+    "cool-ascii-faces": "1.3.3",
+    "ejs": "2.3.3",
+    "express": "4.13.3",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
+    "nodemailer": "3.1.7",
+    "pg": "4.5.6",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2",
-    "pg": "4.x",
-    "ejs": "2.3.3",
-    "express": "4.13.3",
-    "cool-ascii-faces": "1.3.3",
-    "nodemailer": "3.1.7"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
