--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "pg": "4.5.6",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
+    "zone.js": "0.7.2",
+    "csvtojson": "1.1.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
