--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "ng2-charts": "^1.5.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
+    "zone.js": "0.7.2",
+    "pg": "6.1.5",
+    "nodemailer": "4.0.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.1",
