--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zone.js": "0.7.2",
     "pg": "6.1.5",
     "nodemailer": "4.0.1",
+    "csvtojson":"1.1.4",
     "@ionic/app-scripts": "1.3.1",
     "@ionic/cli-plugin-cordova": "0.0.12",
     "@ionic/cli-plugin-ionic-angular": "0.0.6",
