--- a/ionic.config.json
+++ b/ionic.config.json
@@ -5,8 +5,8 @@
   "typescript": true,
   "proxies": [
     {
-      "path": "/db",
-      "proxyUrl": "http://h2ocrop.herokuapp.com/db"
+      "path": "/",
+      "proxyUrl": "http://h2ocrop.herokuapp.com/"
     }
   ]
 }
