Pseudo irrigate response

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -9,7 +9,7 @@
       "proxyUrl": "http://h2ocrop.herokuapp.com/"
     },
     {
-      "path": "/",
+      "path": "/micro",
       "proxyUrl": "http://192.168.43.203/"
     }
   ]
