--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "express":"4.8.4",
     "@angular/common": "2.4.8",
     "@angular/compiler": "2.4.8",
     "@angular/compiler-cli": "2.4.8",
