--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "start": "node server.js"
   },
   "dependencies": {
     "@angular/common": "2.4.8",
