--- a/package.json
+++ b/package.json
@@ -26,23 +26,33 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
-    "@ionic-native/core": "3.1.0",
+    "@ionic-native/core": "^3.12.1",
     "@ionic-native/geolocation": "3.4.4",
-    "@ionic-native/splash-screen": "3.1.0",
-    "@ionic-native/status-bar": "3.1.0",
+    "@ionic-native/in-app-browser": "^3.12.1",
+    "@ionic-native/splash-screen": "^3.1.0",
+    "@ionic-native/status-bar": "^3.1.0",
     "@ionic/app-scripts": "1.3.1",
     "@ionic/cli-plugin-cordova": "0.0.12",
     "@ionic/cli-plugin-ionic-angular": "0.0.6",
     "@ionic/storage": "2.0.0",
     "@types/node": "6.0.69",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-console": "1.0.5",
+    "cordova-plugin-device": "1.1.4",
     "cordova-plugin-geolocation": "2.4.3",
+    "cordova-plugin-inappbrowser": "^1.7.1",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-statusbar": "2.2.1",
+    "cordova-plugin-whitelist": "1.3.1",
     "cors": "2.8.3",
     "crypto-js": "3.1.9-1",
     "csvtojson": "1.1.4",
     "express": "4.8.4",
     "ionic-angular": "2.3.0",
+    "ionic-plugin-keyboard": "~2.2.1",
     "ionicons": "3.0.0",
     "ng2-charts": "^1.5.0",
+    "ng2-pdf-viewer": "^1.1.0",
     "nodemailer": "4.0.1",
     "pg": "6.1.5",
     "request": "2.81.0",
@@ -60,5 +70,19 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-geolocation"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
