Ready for deployment

--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
+      "cordova-plugin-geolocation": {},
       "ionic-plugin-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
